--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Chat_App">
+        <activity android:name=".SignIn"></activity>
+        <activity android:name=".Camera"></activity>
         <activity android:name=".MainPage"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
