--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Chat_App">
-        <activity android:name=".SignIn"></activity>
-        <activity android:name=".Camera"></activity>
-        <activity android:name=".MainPage"></activity>
+        <activity android:name=".Profile"></activity>
+        <activity android:name=".SignIn" />
+        <activity android:name=".Camera" />
+        <activity android:name=".MainPage" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
